--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -25,16 +25,21 @@ body {
   line-height: 160%;
 }
 
+
 .map-content {
-  padding: 100px 25px;
+  padding-top: 25px;
   background-color:#000;
   height: auto;
   width: 100%;
   color: white;
 }
 
+.map-text{
+  padding-left: 25px;
+  padding-right: 25px;
+}
+
 .chart-content {
-  padding: 10px 25px;
   height: auto;
   width: 100%;
   display: inline-block;
@@ -44,8 +49,10 @@ ul{
   margin-left: 50px;
 }
 
-
 .number-div{
+  min-width: 250px;
+  min-height: 150px;
+  text-align: center;
   float: left;
   width: 27%;
   margin: 1%;
@@ -145,6 +152,9 @@ path:hover{
   margin-bottom: 20px;
 }
 
+#content-title {
+  margin-right: 5%;
+}
 #content-topic {
   margin-top: 30px;
   margin-bottom: 5px;
@@ -182,7 +192,9 @@ path:hover{
   position: absolute;
   z-index: 1;
 }
-
+.axis-label {
+  font-size: 12px;
+}
 .tooltip {
   background: #ffffff !important;
   color: #000;
@@ -200,26 +212,32 @@ path:hover{
 .tooltip--title {
   font-weight: bold;
   font-size: 14px !important;
-  margin: 0 !important; }
+  margin: 0 !important; 
+}
 .tooltip--subtitle {
-font-size: 12px;
-margin: 0 !important; }
+  font-size: 12px;
+  margin: 0 !important; 
+}
 .tooltip--datawrapper {
-display: flex;
-flex-direction: column;
-margin-top: 5px !important; }
+  display: flex;
+  flex-direction: column;
+  margin-top: 5px !important; 
+}
 .tooltip--datawrapper .attr {
-opacity: 1;
-font-size: 12px !important;
-margin: 0 !important; }
+  opacity: 1;
+  font-size: 12px !important;
+  margin: 0 !important; 
+}
 .tooltip--datawrapper .value {
-font-weight: bold;
-font-size: 12px !important;
-margin: 0 !important; }
+  font-weight: bold;
+  font-size: 12px !important;
+  margin: 0 !important; 
+}
 .tooltip--datawrapper--row {
-display: flex !important;
-flex-direction: row !important;
-justify-content: space-between !important; }
+  display: flex !important;
+  flex-direction: row !important;
+  justify-content: space-between !important; 
+}
 
 
 .spinner-wrapper {
@@ -310,6 +328,7 @@ input{
 }
 #slider {
   -webkit-appearance: none;
+  width:300px;
   height: 10px;
   border-radius: 5px;  
   background: #d3d3d3;
