--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,10 +1,716 @@
 @import './fonts.css';
 
-* {
-  font-family: 'IBM Plex Sans';
+
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
   margin: 0;
   padding: 0;
-}
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline; }
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+  display: block; }
+
+body {
+  line-height: 1; }
+
+ol, ul {
+  list-style: none; }
+
+blockquote, q {
+  quotes: none; }
+
+blockquote:before, blockquote:after {
+  content: '';
+  content: none; }
+
+q:before, q:after {
+  content: '';
+  content: none; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+
+body {
+  font-family: 'Clan Book', sans-serif;
+  overflow-x: hidden; }
+
+.logo-stiftung {
+  transform: translateX(-20px); }
+
+.copy-funding {
+  margin-top: 3rem;
+  font-size: 14px;
+  width: 60%;
+  color: #000000; }
+
+.section-nav {
+  position: fixed;
+  display: flex;
+  justify-content: space-between; }
+  .section-nav .logo {
+    padding-top: 84vh; }
+
+.credentials {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-end; }
+
+.logo-opendata {
+  margin-right: 3rem; }
+
+.logo-berlin {
+  margin-right: 3rem; }
+
+.project-desc-title .cross-link {
+  color: white; }
+
+.project-desc-author {
+  line-height: 160%; }
+
+
+svg.logo-berlin:hover path {
+  fill: #E60032; }
+
+svg.logo-ibb:hover path#letter {
+  fill: #000000; }
+
+svg.logo-ibb:hover polygon#letter {
+  fill: #000000; }
+
+svg.logo-ibb:hover path#Shape {
+  fill: #00ACCF; }
+
+.copy-funding {
+  line-height: 140%; }
+
+.links {
+  position: absolute;
+  right: 0px;
+  transform: translateY(-15px); }
+  .links .cross-link {
+    margin-right: 1rem; }
+
+#s_contact {
+  background: #2e91d2; }
+
+.button-primary {
+  transition: background 0.1s;
+  background: #E60032;
+  font-family: 'Clan Book', sans-serif;
+  font-size: 16px;
+  padding: .75rem 1.5rem;
+  border-radius: 5px;
+  color: white;
+  border: 0px solid; }
+  .button-primary:focus {
+    outline: 0; }
+  .button-primary:hover {
+    background: #b10026;
+    transition: background 0.1s; }
+
+.navbar.primary > * {
+  color: #000000; }
+
+.black {
+  color: #000000; }
+
+.navbar {
+  position: fixed;
+  z-index: 1000;
+  font-family: 'Clan Medium', sans-serif; }
+  .navbar .nav-item {
+    cursor: pointer;
+    margin-right: 3rem;
+    transition: color .1s; }
+  .navbar .nav-item:hover {
+    color: #E60032;
+    transition: color .1s; }
+  .navbar a {
+    color: white;
+    text-decoration: none; }
+
+#canvas {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000; }
+
+.conditional-break {
+  display: none; }
+
+.inverted {
+  color: #FFFFFF; }
+
+  .primary-bg {
+    color: white;
+    background:  #213A8F;}
+
+  .primary {
+  background:  #213A8F;
+  color: #213A8F; }
+
+.section-wrapper.light {
+  background: #2e91d2; }
+
+.headline-01 {
+  font-size: 57px;
+  font-family: 'Clan Medium', sans-serif;
+  line-height: 120%; }
+
+.white {
+  color: white; }
+
+.secondary {
+  color: #E60032; }
+
+.headline-02.white {
+  color: white;
+  letter-spacing: 1px; }
+
+.headline-04.white {
+  color: white; }
+
+.bullet.white {
+  color: white; }
+
+.headline-02 {
+  font-family: 'Clan Medium', sans-serif;
+  font-size: 36px;
+  line-height: 140%;
+  color: #000000; }
+
+.headline-03.white {
+  font-family: 'Clan Medium', sans-serif;
+  color: white;
+  letter-spacing: 1px; }
+
+.odis-logo-typo {
+  letter-spacing: 5px; }
+
+.headline-03 {
+  font-family: 'Clan Medium', sans-serif;
+  font-size: 24px;
+  line-height: 140%;
+  color: #000000;
+  letter-spacing: 0.5px; }
+
+.headline-04 {
+  font-size: 16px;
+  line-height: 160%;
+  color: #000000; }
+
+.intro {
+  background: #213A8F; }
+
+@-moz-document url-prefix() {
+  h1 {
+    color: #fff; 
+    font-size: 60px;
+  margin: 50px 0 50px 0;} }
+
+.section {
+  margin: 0 auto;
+  position: relative;
+  width: 94%;
+  scroll-behavior: smooth; }
+
+.section-wrapper {
+  background: #213A8F;
+  height: auto;
+  min-width: 100%;
+  scroll-behavior: smooth; }
+
+.section-wrapper.white {
+  background: white; }
+
+.logo {
+  position: absolute;
+  color: white;
+  text-transform: uppercase;
+  font-family: 'Clan Medium',sans-serif;
+  letter-spacing: 3px;
+  line-height: 150%; }
+  .logo .logo-type.book {
+    font-family: 'Clan Book', sans-serif; }
+
+.section-wrapper.intro {
+  height: 100vh; }
+
+.section-intro {
+  background-color: #213A8F;
+  height: 100%;
+  position: static; }
+
+.dl-arrow {
+  top: -3px;
+  position: absolute;
+  right: 0; }
+  .dl-arrow div {
+    background: url("/assets/img/dl-arrow.svg") no-repeat center;
+    background-size: cover;
+    width: auto;
+    width: 22px;
+    height: 22px;
+    z-index: 1000; }
+
+.cross-link {
+  font-family: 'Clan Medium', sans-serif;
+  color: #E60032;
+  transition: color 0.1s;
+  text-decoration: none; }
+  .cross-link:hover {
+    text-decoration: underline;
+    transition: color 0.1s; }
+
+p.copy {
+  font-family: 'Clan Book', sans-serif;
+  line-height: 160%; }
+
+.bullets-wrapper {
+  display: flex;
+  flex-direction: column; }
+  .bullets-wrapper .bullet:before {
+    background-image: url("../img/arrow-bullet.svg");
+    transform: translateX(-16px) translateY(5px);
+    background-size: contain;
+    content: ' ';
+    width: 9px;
+    position: absolute;
+    height: 15px; }
+  .bullets-wrapper .bullet {
+    margin-top: 1rem;
+    line-height: 160%; }
+
+.full-width {
+  width: 100vw;
+  position: relative;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw; }
+
+  .pt-3 {
+    padding-top: 3rem; }
+
+.pt-6 {
+  padding-top: 6rem; }
+
+  .pt-12 {
+    padding-top: 6rem; }
+
+.pt-18 {
+  padding-top: 18rem; }
+
+
+.pb-3 {
+  padding-bottom: 3rem; }
+
+.pb-6 {
+  padding-bottom: 6rem; }
+
+  .pb-12 {
+    padding-bottom: 6rem; }
+
+.mt-12 {
+  margin-top: 12rem; }
+
+.mr-3 {
+  margin-right: 3rem; }
+
+.mt-4 {
+  margin-top: 4rem; }
+
+.mt-2 {
+  margin-top: 2rem; }
+
+.mb-4 {
+  margin-bottom: 4rem; }
+
+.mb-6 {
+  margin-bottom: 6rem; }
+
+.mb-2 {
+  margin-bottom: 2rem; }
+
+.mb-12 {
+  margin-bottom: 12rem; }
+
+.mb-25 {
+  margin-bottom: 2.5rem; }
+
+.mb-1 {
+  margin-bottom: 1rem; }
+
+.pb-5 {
+  padding-bottom: 5rem; }
+
+.pt-5 {
+  padding-top: 5rem; }
+
+.pt-1 {
+  padding-top: 1rem; }
+
+.pb-1 {
+  padding-bottom: 1rem; }
+
+.condition-3 {
+  display: none; }
+
+@media screen and (min-width: 64rem) {
+  .section {
+    max-width: 64rem;
+    width: 85%; }
+  .schedule-event-block {
+    width: 85%; }
+  .conditional-break {
+    display: block; }
+  .schedule-event-details-wrapper {
+    width: 330px; } }
+
+@media screen and (min-width: 54rem) and (max-width: 64rem) {
+  .schedule-event-details-wrapper {
+    width: 45%; }
+  .section {
+    width: 80%; }
+  .schedule-desc-wrapper {
+    width: 380px; }
+  .copy-funding {
+    width: 100%; }
+  .links {
+    left: 0;
+    position: relative;
+    margin-top: 4rem; }
+  .tile-wrapper .tile {
+    width: 42%; }
+  .schedule-wrapper .schedule-event .schedule-date .headline-02 {
+    transform: translateY(-5px); }
+  .schedule-wrapper .schedule-event .schedule-date .schedule-date-month {
+    transform: translateY(-8px); }
+  .condition-3 {
+    display: block; }
+  .schedule-event-block {
+    width: 80%; }
+  .headline-01 {
+    font-family: 'Clan Medium', sans-serif;
+    font-size: 48px; }
+  .conditional-break {
+    display: block; }
+  .conditional-break-2 {
+    display: none; }
+  .pb-12 {
+    padding-bottom: 10rem; }
+  .pt-12 {
+    padding-top: 10rem; } }
+
+@media screen and (max-height: 700px) {
+  .pt-18 {
+    padding-top: 10rem; } }
+
+@media screen and (min-width: 28rem) and (max-width: 54rem) {
+  .schedule-event-details-wrapper {
+    width: 100%; }
+  .section {
+    width: 80%; }
+  .navbar {
+    font-size: 12px; }
+    .navbar .nav-item {
+      cursor: pointer;
+      margin-right: .75rem; }
+  .copy-funding {
+    width: 100%; }
+  .condition-3 {
+    display: none; }
+  .headline-01 {
+    font-size: 48px; }
+  .schedule-event-block {
+    width: 80%; }
+  .profile-wrapper {
+    display: block; }
+    .profile-wrapper .profile-desc-wrapper {
+      margin-left: 0; }
+  .schedule-wrapper .schedule-event .pb-1 {
+    padding-bottom: 2rem; }
+  .schedule-wrapper .schedule-event .pt-1 {
+    padding-top: 2rem; }
+  .schedule-wrapper .schedule-event .schedule-date {
+    background: none;
+    flex-direction: row;
+    justify-content: flex-start;
+    height: 20px;
+    text-align: left; }
+    .schedule-wrapper .schedule-event .schedule-date .headline-02 {
+      font-family: 'Clan Medium', sans-serif;
+      font-size: 16px;
+      color: #000000; }
+    .schedule-wrapper .schedule-event .schedule-date .schedule-date-month {
+      color: #000000;
+      transform: translateY(2px) translateX(4px); }
+    .schedule-wrapper .schedule-event .schedule-date .headline-03 {
+      font-size: 16px;
+      letter-spacing: 0.5px; }
+  .schedule-wrapper .schedule-event .schedule-event-block {
+    flex-wrap: wrap; }
+    .schedule-wrapper .schedule-event .schedule-event-block .schedule-time {
+      margin-right: 0;
+      padding-top: 0rem;
+      text-align: right; }
+    .schedule-wrapper .schedule-event .schedule-event-block .schedule-desc-wrapper {
+      padding-top: 0.5rem; }
+  .schedule-time {
+    margin-right: 0;
+    padding-top: 0rem;
+    text-align: right; }
+  .links {
+    left: 0;
+    position: relative;
+    margin-top: 4rem; }
+  .tile-wrapper .tile {
+    margin-top: 4rem;
+    width: 80%; }
+    .tile-wrapper .tile .tile-arrow-short {
+      display: none; }
+  .conditional-break-2 {
+    display: none; }
+  .pb-12 {
+    padding-bottom: 8rem; }
+  .pt-12 {
+    padding-top: 8rem; }
+  .copy-funding {
+    line-height: 140%;
+    width: 100%; } }
+
+@media screen and (min-width: 0rem) and (max-width: 28rem) {
+  .section {
+    width: 90%; }
+  .copy-funding {
+    line-height: 140%;
+    width: 100%; }
+  p.copy {
+    line-height: 140%; }
+  .navbar {
+    font-size: 10px;
+    font-weight: bold; }
+    .navbar .nav-item {
+      cursor: pointer;
+      margin-right: .75rem; }
+  .pt-18 {
+    padding-top: 9rem; }
+  .schedule-wrapper .schedule-event .pb-1 {
+    padding-bottom: 2rem; }
+  .schedule-wrapper .schedule-event .pt-1 {
+    padding-top: 2rem; }
+  .schedule-wrapper .schedule-event .schedule-date {
+    background: none;
+    flex-direction: row;
+    justify-content: flex-start;
+    height: 20px;
+    text-align: left;
+    transform: translateX(0px); }
+    .schedule-wrapper .schedule-event .schedule-date .headline-02 {
+      font-size: 16px;
+      color: #000000;
+      letter-spacing: 0.5px; }
+    .schedule-wrapper .schedule-event .schedule-date .schedule-date-month {
+      color: #000000;
+      transform: translateY(2px) translateX(4px); }
+    .schedule-wrapper .schedule-event .schedule-date .headline-03 {
+      font-size: 16px;
+      letter-spacing: 0.5px; }
+  .schedule-wrapper .schedule-event .schedule-event-block {
+    flex-wrap: wrap; }
+    .schedule-wrapper .schedule-event .schedule-event-block .schedule-time {
+      margin-right: 0;
+      padding-top: 0rem;
+      color: #000000;
+      text-align: right; }
+    .schedule-wrapper .schedule-event .schedule-event-block .schedule-desc-wrapper {
+      padding-top: 0.5rem; }
+  .links {
+    left: 0;
+    position: relative;
+    margin-top: 4rem; }
+  .conditional-break-2 {
+    display: none; }
+  .pb-5 {
+    padding-bottom: 2rem; }
+  .headline-01 {
+    font-size: 30px;
+    letter-spacing: 0.5px; }
+  .headline-02 {
+    font-size: 28px;
+    letter-spacing: 0.5px; }
+  .headline-03 {
+    font-family: 'Clan Medium', sans-serif;
+    font-size: 18px;
+    letter-spacing: 0.5px; }
+  .headline-04 {
+    line-height: 140%;
+    color: #000000; }
+  .schedule-event-block {
+    width: 90%; }
+    .schedule-event-block .schedule-date {
+      transform: translateX(-10px); }
+  .mb-25 {
+    margin-bottom: 1rem; }
+  .mb-4 {
+    margin-bottom: 2.5rem; }
+  .bullets-wrapper .bullet {
+    transform: translateX(25px);
+    width: 90%;
+    line-height: 140%; }
+  .bullets-wrapper .bullet:before {
+    transform: translateX(-25px) translateY(5px); }
+  .tiles-wrapper > div:nth-child(1) div:nth-child(1) .tile-image {
+    height: 140px; }
+  .tiles-wrapper > div:nth-child(1) div:nth-child(2) .tile-image {
+    height: 125px; }
+  .tiles-wrapper > div:nth-child(3) div:nth-child(1) .tile-image {
+    height: 140px; }
+  .tiles-wrapper > div:nth-child(3) div:nth-child(2) .tile-image {
+    height: 120px; }
+  .profile-wrapper {
+    display: block; }
+    .profile-wrapper .profile-desc-wrapper {
+      margin-left: 0; }
+  .tile-wrapper.mt-4 {
+    margin-top: 0; }
+  .tile-wrapper .tile {
+    width: 100%;
+    margin-right: 0;
+    margin-top: 4rem; }
+    .tile-wrapper .tile .tile-arrow-short {
+      display: none; }
+    .tile-wrapper .tile .tile-headline-wrapper .process-step {
+      font-size: 24px;
+      transform: translateY(0px);
+      position: inherit;
+      display: block; }
+    .tile-wrapper .tile .tile-image {
+      height: 150px; }
+  .conditional-break-2 {
+    display: none; }
+  .pb-12 {
+    padding-bottom: 7rem; }
+  .pt-12 {
+    padding-top: 7rem; } }
+
+canvas {
+  margin: auto; }
+
+.grid {
+  max-width: 1280px;
+  min-width: 320px;
+  border: 2px solid var(--border-color);
+  border-radius: 0.5em;
+  margin: 0 auto;
+  display: grid;
+  /*grid-template-columns: 500px;
+	grid-template-rows: 1em 2fr 2fr;
+	*/
+  grid-gap: 0.5em;
+  grid-template-areas: "a b c" "a d e"; }
+
+.grid > * {
+  background-color: #213A8F;
+  color: var(--border-color);
+  padding: 1.5rem;
+  border: 2px solid;
+  border-radius: 10px;
+  overflow: hidden; }
+
+.chart-container {
+  position: relative;
+  margin: auto;
+  height: 30vh;
+  display: flex; }
+
+.grid .a {
+  grid-area: a; }
+
+.grid .b {
+  grid-area: b; }
+
+.grid .c {
+  grid-area: c; }
+
+.grid .c canvas {
+  padding-top: 1em; }
+
+.grid .d {
+  grid-area: d; }
+
+.grid .e {
+  grid-area: e; }
+
+.chart-container .activity canvas {
+  width: 300px; }
+
+.content h2 {
+  color: white;
+  font-size: 1em;
+  text-transform: uppercase; }
+
+.flex {
+  display: flex; }
+
+.col {
+  flex-direction: column; }
+
+.row {
+  flex-direction: row; }
+
+h2.top-pad {
+  margin-top: 3em; }
+
+.content p {
+  color: white;
+  font-size: 0.8em;
+  padding-top: 0.5em; }
+
+.transp {
+  margin-top: .25rem;
+  opacity: .5; }
+
+.dataset {
+  display: flex;
+  margin-bottom: 1rem;
+  line-height: 125%;
+  width: 100%;
+  position: relative; }
+  .dataset span {
+    width: 90%; }
+
+.content a {
+  text-decoration: none; }
+
+.alt-1 {
+  font-size: 3.5rem;
+  font-family: 'Clan Medium', sans-serif; }
+
+#tagCanvas {
+  transform: translateX(-1rem); }
+
+.alt-2 {
+  color: #ffcc00; }
+
+.alt-3 {
+  font-size: 1rem; }
+
+.right {
+  float: right;
+  text-align: right; }
+
+
 
 .filled {
   fill: url(#mainGradient);
@@ -14,28 +720,13 @@
   text-align: center;
 }
 
-
-body {
-  
-  font-family: 'IBM Plex Sans';
-}
-
 p {
   padding-bottom: 10px;
 }
 
-.text-content {
-  margin:8% 8%;
-  line-height: 160%;
-}
-
-
 .map-content {
-  background-color:#000;
-  padding-bottom: 10%;
   height: auto;
   width: 100%;
-  color: white;
 }
 
 .map-text{
@@ -54,7 +745,7 @@ ul{
 
 .number-div{
   min-width: 250px;
-  min-height: 150px;
+  min-height: 240px;
   text-align: center;
   float: left;
   width: 27%;
@@ -155,31 +846,18 @@ path:hover{
   margin-bottom: 20px;
 }
 
-#content-title {
-  margin-right: 5%;
-}
 #content-topic {
   margin-top: 30px;
   margin-bottom: 5px;
   opacity: .3;
 }
 
-#content-description {
-  margin-top: 15px;
-  margin-bottom: 25px;
-  margin-right: 20%;
-  line-height: 160%;
-}
-
-#title {
-  font-size: 48px;
-  margin: 50px 0 50px 0;
-}
 .subtitle {
   font-size: 30px;
   margin: 25px 0 25px 0;
 }
 
+/*map*/
 #overlay-wrapper {
   opacity: 0;
   transition: opacity .25s ease;
@@ -200,6 +878,8 @@ path:hover{
   z-index: 1;
 }
 .axis-label {
+  fill: #ffffff;
+  opacity: 0.3;
   font-size: 12px;
 }
 .tooltip {
@@ -272,7 +952,7 @@ path:hover{
   animation: sk-scaleout 1.0s infinite ease-in-out;
 }
 
-
+/*Linechart*/
 .line {
   fill: none;
   stroke: #2d91d2;
@@ -298,6 +978,7 @@ path:hover{
   stroke-width: 2px;
   stroke-dasharray: 3,3;
 }
+
 
 .overlay {
   fill: none;
